# haskell-playground

./: BugzillaDemo.hs  CheckRpmVersionWithPip.hs  LICENSE  README.md  haskell-playground.cabal  record-and-functor.lhs  stack.yaml
aeson/: LensAeson.hs  ZuulStatus.hs
attoparsec/: Commit.hs
clash/: README.md  Shakefile.hs  clash-playground.cabal  flake.nix  hie.yaml
clash/src/: BCD.hs  Blink.hs  BlinkSimulation.hs  Button.hs  Crelude.hs  SevenSegment.hs  SevenSegmentMulti.hs
clash/test/: BCDSpec.hs  BlinkSpec.hs  SevenSegmentSpec.hs
clash/verilog/Blink.topEntity/: clash-manifest.json  topEntity.sdc  topEntity.v
clash/verilog/Button.topEntity/: clash-manifest.json  topEntity.v
clash/verilog/SevenSegment.topEntity/: clash-manifest.json  topEntity.v
concurrent/: AsyncPool.hs  MVarLock.hs
effectful/: EffectfulPlayground.hs  effectful-playground.cabal  flake.nix
fold/: breakFoldm.hs
functor/: FmapMaybe.hs
generic/: FieldNames.hs
ghc-core/: TermReuse.hs
haxl/: Haxible.hs
kind/: HaskellKind.hs
lens/: RecordUpdate.hs
megaparsec/: DailyPad.hs
mtl/: EitherAndIO.hs  README.md  SimpleExcept.hs  StateMonad.hs  TestExceptT.hs  TestReaderT.hs  TraverseMaybeT.hs
pandoc/: PandocProcessor.hs
read/: Read.hs  TP.hs
req/: hcurl.hs
rio/: ReaderLog.hs
safe-exceptions/: TryExcept.hs
scheduler/: Scheduler.hs
statistics-linreg/: BugzillaDemo.hs
streaming/: break.hs  breakEither.hs  breakExcept.hs
unliftio/: README.md  issue.hs  solution.hs
wai/: ThreadWai.hs
