cabal-version:       2.4
name:                haskell-playground
version:             0.0.0.0
synopsis:            An haskell playground
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2020 Tristan de Cacqueray
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.1

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , text

executable hcurl
  import:              common-options
  build-depends:       req
                     , http-client
                     , http-client-tls
                     , connection
                     , optparse-generic
                     , modern-uri
  main-is:             hcurl.hs

executable zuul-status
  import:              common-options
  build-depends:       req
  main-is:             ZuulStatus.hs

executable bugzilla-demo
  import:              common-options
  build-depends:       bugzilla
                     , time
                     , statistics-linreg
                     , vector
  main-is:             BugzillaDemo.hs
