cabal-version:      3.0
name:               clash-playground
version:            0.1.0.0
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
extra-source-files: README.md

common common-options
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BlockArguments
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumDecimals
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          common-options
  exposed-modules:
    Blink
    Button
    SevenSegment
    SevenSegmentMulti

  build-depends:
    , base            <5
    , clash-ghc
    , clash-prelude
    , retroclash-lib

  hs-source-dirs:  src

test-suite clash-playground
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , base              <5
    , clash-playground
    , clash-prelude
    , hspec
    , retroclash-lib

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
