cabal-version:      3.0
name:               clash-playground
version:            0.1.0.0
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
extra-source-files: README.md

common common-options
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BlockArguments
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumDecimals
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall
    -Wno-orphans
    -- createDomain template may creates unused top-binds
    -Wno-unused-top-binds
    -- Somehow SevenSegment.showSS is non-exhaustive?
    -Wno-incomplete-patterns
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -fwrite-ide-info
    -hiedir=.hie

    -Wno-unticked-promoted-constructors
    -- for BCD.fromDigit
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.Extra.Solver
  build-depends:
    , base            <5
    -- for BCD.fromDigit
    , ghc-typelits-extra
    , ghc-typelits-knownnat
    , ghc-typelits-natnormalise

library
  import:          common-options
  exposed-modules:
    Crelude
    BCD
    Blink
    Button
    SevenSegment
    SevenSegmentMulti

  build-depends:
    , clash-ghc
    , clash-prelude
    , retroclash-lib
    , witch

  hs-source-dirs:  src

test-suite clash-playground
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    BCDSpec
    BlinkSpec
    SevenSegmentSpec

  build-depends:
    , clash-playground
    , hspec

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
